--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
       };
     </script>
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+    <script src="//unpkg.com/prismjs/components/prism-bash.js"></script>
   </body>
 </html>
